--- a/FIRST-WED/index.html
+++ b/FIRST-WED/index.html
@@ -11,7 +11,7 @@
 <li>등산과 클라이밍</li>
 <p>최근 등산활동으로 영남 알프스 천고지 등산대회에 참가해 42km완주를 성공했습니다.</p>
 <p>클라이밍은 최근 v5 난이도 까지 완등한 경험이 있습니다</p>
-<p><ahref="https://tf.uaf.or.kr/"<a></a></ahref></p>
+<p><ahref="https://tf.uaf.or.kr/">.</a></p>
 <h2>이메일</h2>
 <p>202515415@gmail.com</p>
 </html>
